# skills

./: .gitignore  README.md  SKILL_SPEC_v1.md  SKILL_TEMPLATE_v1.md  package.json  skill-lint-checklist.md
.github/ISSUE_TEMPLATE/: skill-issue.yml
.github/workflows/: npm-publish.yml  release-tag.yml
skills/: run-ctl.mjs
skills/bside-prd-planner/: SKILL.md
skills/nocobase-acl-manage/: SKILL.md  run-ctl.mjs
skills/nocobase-ai-employee/: SKILL.md
skills/nocobase-api-call/: SKILL.md
skills/nocobase-app-builder/: SKILL.md
skills/nocobase-build-planner/: SKILL.md
skills/nocobase-data-analysis/: SKILL.md
skills/nocobase-data-modeling/: SKILL.md
skills/nocobase-dsl-reconciler/: AGENT.md  ISSUES.md  SKILL.md  data_seed.sql
skills/nocobase-env-bootstrap/: SKILL.md  env-manage.mjs  skill-lint-report.json
skills/nocobase-env-manage/: SKILL.md
skills/nocobase-install-start/: SKILL.md
skills/nocobase-mcp-setup/: SKILL.md
skills/nocobase-notification-manage/: SKILL.md
skills/nocobase-page-builder/: SKILL.md
skills/nocobase-page-builder/mcp-server/: pyproject.toml
skills/nocobase-page-builder/mcp-server/src/nocobase_mcp/: __init__.py  __main__.py  blueprint.py  client.py  markup_parser.py  models.py  server.py  tree_builder.py  utils.py
skills/nocobase-page-builder/mcp-server/src/nocobase_mcp/tools/: __init__.py  ai_employee.py  collections.py  fields.py  page_tool.py  pages.py  routes.py  tree_tools.py  workflows.py
skills/nocobase-plan-executor/: SKILL.md
skills/nocobase-plugin-development/: SKILL.md
test/: agent-runner.ts
(+2908 files in other folders)
