[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nocobase-mcp"
version = "0.1.0"
description = "Python client library for NocoBase — page building with XML markup DSL, JS auto-generation, data modeling, and administration. Can also run as an MCP server."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
nocobase-mcp = "nocobase_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nocobase_mcp"]
